Fixed padding on cards on smaller screen sizes.

--- a/css/style.scss
+++ b/css/style.scss
@@ -64,6 +64,18 @@ html {
   div.overlay-text {
     width: 240px;
   }
+  #current-members .container {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  #former-members .container {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  #facilities .container {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 
 /* Small devices (landscape phones, 544px and up) */
